2006-11-19  Steffen Macke <Steffen_Macke@dorsch.com.jo>

	* inp2shp/inp2shp.c: Improved attribute import of valves and pumps
	(Improvements for bug #1469111); Usage change presumably fixes 
	bug #1598930 - awaiting testing
	* inp2shp/inp2shp.dev:
	* inp2shp/inp2shp_private.h:
	* inp2shp/inp2shp_private.rc:
	* inp2shp/msvc/inp2shp.dsp:
	* inp2shp/msvc/inp2shp.dsw: Added some IDE files

2006-09-16  Steffen Macke <Steffen_Macke@dorsch.com.jo>

	* doc/en/dcwaterdesign.xml: Switched from article to chapter;
	added dc_id tutorial; added quality control tutorial

2006-08-28  Steffen Macke <Steffen_Macke@dorsch.com.jo>

	* doc/en/dcwaterdesign.xml:
	* dcwatdes.model.epanet.writeinpfile.ave: Set value of pipe.status to
	"closed" when it contains "closed". Implements RFE #1547032
	
2006-05-30  Steffen Macke <Steffen_Macke@dorsch.com.jo>

	* doc/en/dcwaterdesign.xml: More comprehensive INP file import
	description
	
2006-05-24  Steffen Macke <Steffen_Macke@dorsch.com.jo>

	* dcwatdes.view.popup.pipes.seteconomicdiameter.ave: 
	* dcwatdes.view.digitizepipe.ave: Added DN80
	* dcwatdesextension.make.ave: Version is 2.12.3+svn now

2006-05-23  Steffen Macke <Steffen_Macke@dorsch.com.jo>

	* doc/en/dcwaterdesign.xml: Added elevation calculation tutorial.

2006-05-21  Steffen Macke <Steffen_Macke@dorsch.com.jo>

	* installer/dc.ico: Updated icon

2006-05-18  Steffen Macke <Steffen_Macke@dorsch.com.jo>

	* build.xml:
	* doc/en/dcwaterdesign.xml:
	* installer/dc_water_design_extension.nsi: Version number is 2.12.3 now

2006-05-15  Steffen Macke <Steffen_Macke@dorsch.com.jo>

	* dcwatdes.model.epanet.writeinpfile.ave: Added experimental writing
	of OptiDesigner files
	* doc/en/dcwaterdesign.xml: Mentioning experimental OptiDesigner
	files, set economic diameter function

2006-05-04  Steffen Macke <Steffen_Macke@dorsch.com.jo>

	* doc/en/dcwaterdesign.xml: Added Thiessen polygon tutorial; Switched
	from DocBook article to book; added index
