@@ -8,8 +8,8 @@
 // TO CHANGE VERSION INFORMATION, EDIT PROJECT OPTIONS...
 //
 1 VERSIONINFO
-FILEVERSION 0,2,1,7
-PRODUCTVERSION 0,2,1,7
+FILEVERSION 0,2,2,29
+PRODUCTVERSION 0,2,2,29
 FILETYPE VFT_APP
 {
   BLOCK "StringFileInfo"
@@ -17,14 +17,14 @@ FILETYPE VFT_APP
 		 BLOCK "040904E4"
 		 {
 			 VALUE "CompanyName", "DC Water and Environment"
-			 VALUE "FileVersion", ""
-			 VALUE "FileDescription", "Developed using the Dev-C++ IDE"
+			 VALUE "FileVersion", "0.2.2"
+			 VALUE "FileDescription", "inp2shp"
 			 VALUE "InternalName", ""
-			 VALUE "LegalCopyright", "GPL"
+			 VALUE "LegalCopyright", "Copyrigh (c) 2002 - 2006 DC Water and Environment"
 			 VALUE "LegalTrademarks", ""
-			 VALUE "OriginalFilename", ""
+			 VALUE "OriginalFilename", "inp2shp.exe"
 			 VALUE "ProductName", "inp2shp"
-			 VALUE "ProductVersion", ""
+			 VALUE "ProductVersion", "0.2.2"
 		 }
 	 }
   BLOCK "VarFileInfo"
